Added backend function for updateProfile and to check the user is authenticated or not

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,9 @@ PORT=5001
 JWT_SECRET=mysecretkey
 
 NODE_ENV = development
+
+CLOUDINARY_CLOUD_NAME=dyntddfn5
+
+LOUDINARY_API_KEY=229794211164898
+
+CLOUDINARY_API_SECRET=H2ypI2otz_ZJVg5C-0UNbC4ur0k
